--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+	<finalName>my-base-project</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
